i create functions createNewLine and listClients

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "admin",
   "version": "1.0.0",
-  "description": "1836-crud_js_async project",
+  "description": "PetShop2 project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HarlandLohora/1836-CRUD_JS_Async.git"
+    "url": "git+https://github.com/lokywolf2295/PetShop2.git"
   },
   "keywords": [
     "Alura"
   ],
-  "author": "Harland Lohora",
+  "author": "Matias Carballo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/HarlandLohora/1836-CRUD_JS_Async/issues"
+    "url": "https://github.com/lokywolf2295/PetShop2/issues"
   },
-  "homepage": "https://github.com/HarlandLohora/1836-CRUD_JS_Async#readme"
+  "homepage": "https://github.com/lokywolf2295/PetShop2"
 }
